--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "CIS486",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.mjs"
   },
   "repository": {
     "type": "git",
@@ -19,8 +19,8 @@
   },
   "homepage": "https://github.com/gshew24/griff-devops-2026#readme",
   "dependencies": {
-    "dotenv": "^17.3.1",
-    "express": "^5.2.1",
-    "mongodb": "^7.1.0"
+    "dotenv": "^16.4.5",
+    "express": "^4.18.2",
+    "mongodb": "^6.5.0"
   }
 }
